--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,27 +1,25 @@
-spring.application.name=foundation
-
-spring.datasource.url=jdbc:mariadb://localhost:3306/found
-spring.datasource.username=root
-spring.datasource.password=1234
+# 데이터베이스 설정
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
-# JPA and Hibernate settings
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
-# Initialize SQL schema
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
-
-#mariadb ?? update????
-
-kakao.client_id=a20db02fece65639894511bf1902d2c4
+# Kakao API 설정
+kakao.client_id=${KAKAO_CLIENT_ID}
 kakao.redirect_uri=http://localhost:8080/callback
 
+# AWS 설정
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
+cloud.aws.s3.bucket=town-in
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
 
-#cookie
-server.servlet.session.tracking-modes = cookie
-server.servlet.session.timeout = 1800
+# 쿠키 및 세션 설정
+server.servlet.session.tracking-modes=cookie
+server.servlet.session.timeout=1800
 
-
+# Redis 설정
+spring.redis.host=localhost
+spring.redis.port=6379
