--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -13,14 +13,17 @@ jobs:
     steps:
       - name: EC2 서버에 SSH 원격 접속 후 프론트엔드 배포 작업 수행
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script_stops: true
+          script_stop: true
           script: |
             cd /home/ubuntu/local-community-web/frontend  # 프론트엔드 디렉토리로 이동
             git pull origin dev  # 최신 코드 가져오기
             npm install  # 의존성 설치
             npm run build  # 빌드
-            aws s3 sync build/ s3://town-in-web-page --region ap-northeast-2 --acl public-read --delete  # S3에 배포
+            aws s3 sync build/ s3://town-in-web-page --region ap-northeast-2 --delete
